--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Links</title>
-<link href="EDC.css" rel="stylesheet" type="text/css">
+<link href="css/EDC.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="Logo">
