--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div id="Logo">
-	<a href="https://www.instagram.com/edc_tiet/?hl=en" target="_blank"><span><img class="size" src="img/quarentime logo.png" alt="logo"></span></a>
+	<a href="https://www.instagram.com/edc_tiet/?hl=en" target="_blank"><img class="size" src="img/quarentime logo.png" alt="logo"></a>
 </div>
 <div id="links">
 	<br>
