--- a/index.html
+++ b/index.html
@@ -6,38 +6,41 @@
 <link href="css/EDC.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-<div id="Logo">
-	<a href="https://www.instagram.com/edc_tiet/?hl=en" target="_blank"><img class="size" src="img/quarentime logo.png" alt="logo"></a>
+<div id="navbar">
+	<ul class="nav">
+		<li><a  href="https://www.instagram.com/edc_tiet/" target="_blank"><img class="size" src="img/quarentime logo.png"></a>
+		</li>
+	</ul>
 </div>
 <div id="links">
 	<br>
 	<br><p>
 	<ul class="deco">
-		<li><a href="https://archive.org/details/angeladuckworthgritthepowerofpassionandperseverance20161/page/n5/mode/2up" target="_blank">Grit The Power of Passion and Perseverance</a>
+		<li class="light"><a href="https://archive.org/details/angeladuckworthgritthepowerofpassionandperseverance20161/page/n5/mode/2up" target="_blank">Grit The Power of Passion and Perseverance</a>
 		</li>
 		<br>
-		<li><a href="https://archive.org/details/HowToWinFriendsAndInfluencePeopleBy/mode/2up" target="_blank">How to Win Friends and Influence People</a>
+		<li class="light"><a href="https://archive.org/details/HowToWinFriendsAndInfluencePeopleBy/mode/2up" target="_blank">How to Win Friends and Influence People</a>
 		</li>
 		<br>
-		<li><a href="https://archive.org/details/The7HabitsOfHighlyEffectivePeople_201809/mode/2up" target="_blank">The 7 habits of Highly Effective People</a>
+		<li class="light"><a href="https://archive.org/details/The7HabitsOfHighlyEffectivePeople_201809/mode/2up" target="_blank">The 7 habits of Highly Effective People</a>
 		</li>
 		<br>
-		<li><a href="https://archive.org/details/ThePsychologyOfSellingBrianTracy/mode/2up" target="_blank">The psychology of selling</a>
+		<li class="light"><a href="https://archive.org/details/ThePsychologyOfSellingBrianTracy/mode/2up" target="_blank">The psychology of selling</a>
 		</li>
 		<br>
-		<li><a href="https://archive.org/details/TheElementsOfStyle4thEdition/mode/2up" target="_blank">The Elements of Style</a>
+		<li class="light"><a href="https://archive.org/details/TheElementsOfStyle4thEdition/mode/2up" target="_blank">The Elements of Style</a>
 		</li>
 		<br>
-		<li><a href="https://archive.org/details/TheEMythRevisitedMichaelE.Gerber/mode/2up" target="_blank">The E-Myth Revisited</a>
+		<li class="light"><a href="https://archive.org/details/TheEMythRevisitedMichaelE.Gerber/mode/2up" target="_blank">The E-Myth Revisited</a>
 		</li>
 		<br>
-		<li><a href="http://elibrary.bsu.az/books_400/N_232.pdf" target="_blank">Influence The Psychology of Persuasion</a>
+		<li class="light"><a href="http://elibrary.bsu.az/books_400/N_232.pdf" target="_blank">Influence The Psychology of Persuasion</a>
 		</li>
 		<br>
-		<li><a href="https://issuu.com/samuelcabradshaw/docs/0735213321-lost-and-founder-by-rand-fishkin" target="_blank">Lost and Founder</a>
+		<li class="light"><a href="https://issuu.com/samuelcabradshaw/docs/0735213321-lost-and-founder-by-rand-fishkin" target="_blank">Lost and Founder</a>
 		</li>
 		<br>
-		<li><a href="https://issuu.com/janeriwo/docs/0316017930-outliers_by_malcolm_glad" target="_blank">Outliers</a>
+		<li class="light"><a href="https://issuu.com/janeriwo/docs/0316017930-outliers_by_malcolm_glad" target="_blank">Outliers</a>
 		</li>
 	</ul>
 	</p>
