--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <div id="navbar">
 	<ul class="nav">
-		<li class="pos"><a  href="https://www.instagram.com/edc_tiet/" target="_blank"><img class="size" src="img/quarentime logo.png"></a>
+		<li class="pos"><a  href="https://www.instagram.com/edc_tiet/" target="_blank"><img class="size" src="img/blue.png"></a>
 		</li>
 	</ul>
 </div>
