--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<br>
 	<br><p>
 	<ul class="deco">
-		<li class="light"><a href="https://archive.org/details/angeladuckworthgritthepowerofpassionandperseverance20161/page/n5/mode/2up" target="_blank">Grit The Power of Passion and Perseverance</a>
+		<li class="light"><a href="https://archive.org/details/angeladuckworthgritthepowerofpassionandperseverance20161/page/n5/mode/2up" target="_blank">Grit: The Power of Passion and Perseverance</a>
 		</li>
 		<br>
 		<li class="light"><a href="https://archive.org/details/HowToWinFriendsAndInfluencePeopleBy/mode/2up" target="_blank">How to Win Friends and Influence People</a>
@@ -31,7 +31,7 @@
 		<li class="light"><a href="https://issuu.com/janeriwo/docs/0316017930-outliers_by_malcolm_glad" target="_blank">Outliers</a>
 		</li>
 		<br>
-		<li class="light"><a href="https://archive.org/details/The7HabitsOfHighlyEffectivePeople_201809/mode/2up" target="_blank">The 7 habits of Highly Effective People</a>
+		<li class="light"><a href="https://archive.org/details/The7HabitsOfHighlyEffectivePeople_201809/mode/2up" target="_blank">The 7 Habits of Highly Effective People</a>
 		</li>
 		<br>
 		<li class="light"><a href="https://archive.org/details/TheElementsOfStyle4thEdition/mode/2up" target="_blank">The Elements of Style</a>
@@ -40,7 +40,7 @@
 		<li class="light"><a href="https://archive.org/details/TheEMythRevisitedMichaelE.Gerber/mode/2up" target="_blank">The E-Myth Revisited</a>
 		</li>
 		<br>
-		<li class="light"><a href="https://archive.org/details/ThePsychologyOfSellingBrianTracy/mode/2up" target="_blank">The psychology of selling</a>
+		<li class="light"><a href="https://archive.org/details/ThePsychologyOfSellingBrianTracy/mode/2up" target="_blank">The Psychology of Selling</a>
 		</li>
 	</ul>
 	</p>
