--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<li class="light"><a href="https://archive.org/details/HowToWinFriendsAndInfluencePeopleBy/mode/2up" target="_blank">How to Win Friends and Influence People</a>
 		</li>
 		<br>
-		<li class="light"><a href="http://elibrary.bsu.az/books_400/N_232.pdf" target="_blank">Influence The Psychology of Persuasion</a>
+		<li class="light"><a href="http://elibrary.bsu.az/books_400/N_232.pdf" target="_blank">Influence: The Psychology of Persuasion</a>
 		</li>
 		<br>
 		<li class="light"><a href="https://issuu.com/samuelcabradshaw/docs/0735213321-lost-and-founder-by-rand-fishkin" target="_blank">Lost and Founder</a>
